--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Service Worker Demo</title>
+  <link rel="manifest" href="./manifest.json">
+  <script>
+    if("serviceWorker" in navigator){
+    navigator.serviceWorker.register("sw.js");
+  }
+  </script>
 </head>
+<meta name="apple-mobile-web-app-capable" content="yes">
 <body>
   <h1>Service Worker Demo</h1>
   
